[project]
name = "openmeteo-weather-mcp"
version = "0.1.0"
description = "A weather forecast MCP server using Open-Meteo API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "bs4>=0.0.2",
  "fastapi>=0.128.0",
  "httpx>=0.27.0",
  "mcp[cli]>=0.1.0",
  "openai>=1.0.0",
  "pydantic>=2.6.0",
  "uvicorn>=0.29.0",
]

authors = [
    { name = "hammerZh-Z", email = "your-email@example.com" }
]

license = { text = "MIT" }

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/hammerZh-Z/weather_MCP"
Repository = "https://github.com/hammerZh-Z/weather_MCP"
Issues = "https://github.com/hammerZh-Z/weather_MCP/issues"

[project.scripts]
openmeteo-weather-mcp = "weather:main"

[tool.hatch.build.targets.wheel]
packages = ["weather.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
